# gnss-sdr-telecommand-client

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  telnetmanager.cpp  telnetmanager.h
